--- a/benchmarx-cli/pom.xml
+++ b/benchmarx-cli/pom.xml
@@ -17,6 +17,11 @@
 			<artifactId>benchmarx-model</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>io.github.k0zka</groupId>
+			<artifactId>benchmarx-api</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
