--- a/benchmarx-maven-plugin/pom.xml
+++ b/benchmarx-maven-plugin/pom.xml
@@ -9,13 +9,53 @@
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
+	<properties>
+		<maven.api.version>3.6.0</maven.api.version>
+	</properties>
 	<artifactId>benchmarx-maven-plugin</artifactId>
+	<name>benchmarx-maven-plugin</name>
+	<description>uploads various benchmark results to benchmarx</description>
+	<packaging>maven-plugin</packaging>
+	<inceptionYear>2020</inceptionYear>
 
 	<dependencies>
 		<dependency>
 			<groupId>io.github.k0zka</groupId>
 			<artifactId>benchmarx-model</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>io.github.k0zka</groupId>
+			<artifactId>benchmarx-cli</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-plugin-api</artifactId>
+			<version>${maven.api.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.maven.plugin-tools</groupId>
+			<artifactId>maven-plugin-annotations</artifactId>
+			<version>${maven.api.version}</version>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.jetbrains.kotlin</groupId>
+			<artifactId>kotlin-stdlib</artifactId>
+			<version>${kotlin.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jetbrains.kotlin</groupId>
+			<artifactId>kotlin-test-junit</artifactId>
+			<version>${kotlin.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.jetbrains.kotlin</groupId>
+			<artifactId>kotlin-test-junit</artifactId>
+			<version>${kotlin.version}</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
