--- a/benchmarx-api/pom.xml
+++ b/benchmarx-api/pom.xml
@@ -29,6 +29,11 @@
 			<version>2.0.1.Final</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml</groupId>
+			<artifactId>aalto-xml</artifactId>
+			<version>1.2.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
