--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
 		<quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
 		<quarkus.platform.version>1.2.0.Final</quarkus.platform.version>
 		<surefire-plugin.version>2.22.1</surefire-plugin.version>
+		<junit.jupiter.version>5.4.2</junit.jupiter.version>
 	</properties>
 
 	<build>
