--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-         xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+         xmlns="http://maven.apache.org/POM/4.0.0">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>io.github.k0zka</groupId>
 	<artifactId>benchmarx</artifactId>
@@ -13,11 +13,12 @@
 		<module>benchmarx-maven-plugin</module>
 		<module>benchmarx-cli</module>
 		<module>benchmarx-server</module>
+		<module>benchmarx-gatling</module>
 	</modules>
 
 	<properties>
 		<compiler-plugin.version>3.8.1</compiler-plugin.version>
-		<kotlin.version>1.3.70</kotlin.version>
+		<kotlin.version>1.3.71</kotlin.version>
 		<maven.compiler.parameters>true</maven.compiler.parameters>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
