--- a/benchmarx-cli/pom.xml
+++ b/benchmarx-cli/pom.xml
@@ -19,6 +19,11 @@
 		</dependency>
 		<dependency>
 			<groupId>io.github.k0zka</groupId>
+			<artifactId>benchmarx-client</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>io.github.k0zka</groupId>
 			<artifactId>benchmarx-api</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
@@ -54,6 +59,16 @@
 			<artifactId>junit-jupiter</artifactId>
 			<version>${junit.jupiter.version}</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.github.ajalt</groupId>
+			<artifactId>clikt</artifactId>
+			<version>2.8.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.github.ajalt</groupId>
+			<artifactId>mordant</artifactId>
+			<version>1.2.1</version>
 		</dependency>
 	</dependencies>
 
