--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 		<module>benchmarx-cli</module>
 		<module>benchmarx-server</module>
 		<module>benchmarx-gatling</module>
+		<module>benchmarx-client</module>
 	</modules>
 
 	<properties>
