--- a/benchmarx-server/pom.xml
+++ b/benchmarx-server/pom.xml
@@ -92,7 +92,7 @@
 		<dependency>
 			<groupId>io.github.kerubistan.kroki</groupId>
 			<artifactId>kroki-utils</artifactId>
-			<version>1.11-SNAPSHOT</version>
+			<version>${kroki.version}</version>
 		</dependency>
 
 		<dependency>
