--- a/benchmarx-integration-tests/pom.xml
+++ b/benchmarx-integration-tests/pom.xml
@@ -18,6 +18,21 @@
 	</properties>
 
 	<dependencies>
+
+		<dependency>
+			<groupId>${parent.groupId}</groupId>
+			<artifactId>benchmarx-cli</artifactId>
+			<version>${parent.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>${parent.groupId}</groupId>
+			<artifactId>benchmarx-cli</artifactId>
+			<version>${parent.version}</version>
+			<scope>test</scope>
+		</dependency>
+
 		<dependency>
 			<groupId>org.jetbrains.kotlin</groupId>
 			<artifactId>kotlin-stdlib</artifactId>
@@ -52,8 +67,20 @@
 
 	<build>
 		<testSourceDirectory>src/test/kotlin</testSourceDirectory>
-
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>2.22.1</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>integration-test</goal>
+							<goal>verify</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 			<plugin>
 				<groupId>org.jetbrains.kotlin</groupId>
 				<artifactId>kotlin-maven-plugin</artifactId>
