--- a/benchmarx-server/pom.xml
+++ b/benchmarx-server/pom.xml
@@ -100,6 +100,27 @@
 			<artifactId>de.flapdoodle.embed.mongo</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>io.cucumber</groupId>
+			<artifactId>cucumber-java8</artifactId>
+			<version>6.1.1</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>io.cucumber</groupId>
+			<artifactId>cucumber-junit</artifactId>
+			<version>6.1.1</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>${parent.groupId}</groupId>
+			<artifactId>benchmarx-cli</artifactId>
+			<version>${parent.version}</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<sourceDirectory>src/main/kotlin</sourceDirectory>
