--- a/doki-server/pom.xml
+++ b/doki-server/pom.xml
@@ -2,14 +2,16 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
 	<parent>
-		<artifactId>benchmarx</artifactId>
-		<groupId>io.github.k0zka</groupId>
+		<artifactId>doki-root</artifactId>
+		<groupId>dev.doki</groupId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
+
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>benchmarx-server</artifactId>
+	<artifactId>doki-server</artifactId>
 
 	<dependencyManagement>
 		<dependencies>
@@ -24,13 +26,13 @@
 	</dependencyManagement>
 	<dependencies>
 		<dependency>
-			<groupId>io.github.k0zka</groupId>
-			<artifactId>benchmarx-model</artifactId>
+			<groupId>dev.doki</groupId>
+			<artifactId>doki-model</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>io.github.k0zka</groupId>
-			<artifactId>benchmarx-api</artifactId>
+			<groupId>dev.doki</groupId>
+			<artifactId>doki-api</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
@@ -116,7 +118,7 @@
 
 		<dependency>
 			<groupId>${parent.groupId}</groupId>
-			<artifactId>benchmarx-cli</artifactId>
+			<artifactId>doki-cli</artifactId>
 			<version>${parent.version}</version>
 			<scope>test</scope>
 		</dependency>
