--- a/doki-client/pom.xml
+++ b/doki-client/pom.xml
@@ -1,29 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
+    <parent>
+        <artifactId>doki-root</artifactId>
+        <groupId>dev.doki</groupId>
+        <version>1.0.0-SNAPSHOT</version>
+    </parent>
+
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>io.github.k0zka</groupId>
-    <artifactId>benchmarx-client</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <artifactId>doki-client</artifactId>
     <packaging>jar</packaging>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <kotlin.version>1.3.72</kotlin.version>
-        <kotlin.code.style>official</kotlin.code.style>
         <junit.version>4.12</junit.version>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>io.github.k0zka</groupId>
-            <artifactId>benchmarx-model</artifactId>
+            <groupId>dev.doki</groupId>
+            <artifactId>doki-model</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>io.github.k0zka</groupId>
-            <artifactId>benchmarx-api</artifactId>
+            <groupId>dev.doki</groupId>
+            <artifactId>doki-api</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
