--- a/doki-integration-tests/pom.xml
+++ b/doki-integration-tests/pom.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
 	<parent>
-		<artifactId>benchmarx</artifactId>
-		<groupId>io.github.k0zka</groupId>
+		<artifactId>doki-root</artifactId>
+		<groupId>dev.doki</groupId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>benchmarx-integration-tests</artifactId>
+	<artifactId>doki-integration-tests</artifactId>
 	<packaging>jar</packaging>
 
 	<properties>
@@ -21,14 +22,14 @@
 
 		<dependency>
 			<groupId>${parent.groupId}</groupId>
-			<artifactId>benchmarx-cli</artifactId>
+			<artifactId>doki-cli</artifactId>
 			<version>${parent.version}</version>
 			<scope>test</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>${parent.groupId}</groupId>
-			<artifactId>benchmarx-cli</artifactId>
+			<artifactId>doki-cli</artifactId>
 			<version>${parent.version}</version>
 			<scope>test</scope>
 		</dependency>
