--- a/doki-maven-plugin/pom.xml
+++ b/doki-maven-plugin/pom.xml
@@ -3,8 +3,8 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
-		<artifactId>benchmarx</artifactId>
-		<groupId>io.github.k0zka</groupId>
+		<artifactId>doki-root</artifactId>
+		<groupId>dev.doki</groupId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
@@ -12,7 +12,7 @@
 	<properties>
 		<maven.api.version>3.6.0</maven.api.version>
 	</properties>
-	<artifactId>benchmarx-maven-plugin</artifactId>
+	<artifactId>doki-maven-plugin</artifactId>
 	<name>benchmarx-maven-plugin</name>
 	<description>uploads various benchmark results to benchmarx</description>
 	<packaging>maven-plugin</packaging>
@@ -25,13 +25,13 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>io.github.k0zka</groupId>
-			<artifactId>benchmarx-model</artifactId>
+			<groupId>dev.doki</groupId>
+			<artifactId>doki-model</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>io.github.k0zka</groupId>
-			<artifactId>benchmarx-cli</artifactId>
+			<groupId>dev.doki</groupId>
+			<artifactId>doki-cli</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
