--- a/doki-model/pom.xml
+++ b/doki-model/pom.xml
@@ -3,13 +3,13 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
-		<artifactId>benchmarx</artifactId>
-		<groupId>io.github.k0zka</groupId>
+		<artifactId>doki-root</artifactId>
+		<groupId>dev.doki</groupId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>benchmarx-model</artifactId>
+	<artifactId>doki-model</artifactId>
 
 	<dependencies>
 		<dependency>
