fix: jackson and not jsonb

--- a/doki-server/pom.xml
+++ b/doki-server/pom.xml
@@ -114,7 +114,7 @@
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-resteasy-jsonb</artifactId>
+      <artifactId>quarkus-jackson</artifactId>
     </dependency>
   </dependencies>
   <build>
