--- a/doki-server/webapp/angular.json
+++ b/doki-server/webapp/angular.json
@@ -25,6 +25,7 @@
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "src/assets/fonts/mono/fonts-mono.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -89,7 +90,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "src/assets/fonts/mono/fonts-mono.css"
             ],
             "scripts": []
           }
