--- a/doki-server/webapp/package.json
+++ b/doki-server/webapp/package.json
@@ -25,6 +25,9 @@
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@ng-bootstrap/ng-bootstrap": "^8.0.0",
     "bootstrap": "^4.5.0",
+    "echarts": "^5.0.0",
+    "ngx-echarts": "^5.2.2",
+    "resize-observer-polyfill": "^1.5.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
