--- a/doki-cli/pom.xml
+++ b/doki-cli/pom.xml
@@ -35,12 +35,12 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.12.0-rc1</version>
+			<version>2.12.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.module</groupId>
 			<artifactId>jackson-module-kotlin</artifactId>
-			<version>2.12.0-rc1</version>
+			<version>2.12.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jetbrains.kotlin</groupId>
@@ -64,7 +64,19 @@
 			<groupId>com.github.ajalt</groupId>
 			<artifactId>clikt</artifactId>
 			<version>2.8.0</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.jetbrains.kotlin</groupId>
+					<artifactId>kotlin-stdlib-common</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
+		<dependency>
+			<groupId>org.jetbrains.kotlin</groupId>
+			<artifactId>kotlin-stdlib-common</artifactId>
+			<version>${kotlin.version}</version>
+		</dependency>
+
 		<dependency>
 			<groupId>com.github.ajalt</groupId>
 			<artifactId>mordant</artifactId>
