--- a/doki-server/pom.xml
+++ b/doki-server/pom.xml
@@ -83,7 +83,7 @@
     <dependency>
       <groupId>com.fasterxml.jackson.module</groupId>
       <artifactId>jackson-module-kotlin</artifactId>
-      <version>2.12.0-rc1</version>
+      <version>2.12.0</version>
     </dependency>
     <dependency>
       <groupId>io.github.kerubistan.kroki</groupId>
