--- a/doki-server/src/main/resources/application.properties
+++ b/doki-server/src/main/resources/application.properties
@@ -3,3 +3,9 @@
 quarkus.swagger-ui.always-include=true
 quarkus.swagger-ui.path=/api-doc
 
+quarkus.resteasy.gzip.enabled=true
+
+# placeholders
+quarkus.oauth2.client-id=client_id
+quarkus.oauth2.client-secret=secret
+quarkus.oauth2.introspection-url=http://oauth-server/introspect
