--- a/pom.xml
+++ b/pom.xml
@@ -22,16 +22,17 @@
 
 	<properties>
 		<compiler-plugin.version>3.8.1</compiler-plugin.version>
-		<kotlin.version>1.3.71</kotlin.version>
+		<kotlin.version>1.4.21</kotlin.version>
+		<version.kotlin>${kotlin.version}</version.kotlin>
 		<maven.compiler.parameters>true</maven.compiler.parameters>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<quarkus-plugin.version>1.2.0.Final</quarkus-plugin.version>
+		<quarkus-plugin.version>1.10.5.Final</quarkus-plugin.version>
 		<quarkus.platform.artifact-id>quarkus-universe-bom</quarkus.platform.artifact-id>
 		<quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
-		<quarkus.platform.version>1.2.0.Final</quarkus.platform.version>
+		<quarkus.platform.version>1.10.5.Final</quarkus.platform.version>
 		<surefire-plugin.version>2.22.1</surefire-plugin.version>
 		<junit.jupiter.version>5.4.2</junit.jupiter.version>
 		<kroki.version>1.21</kroki.version>
