--- a/doki-server/pom.xml
+++ b/doki-server/pom.xml
@@ -91,6 +91,11 @@
       <version>${kroki.version}</version>
     </dependency>
     <dependency>
+      <groupId>io.github.kerubistan.kroki</groupId>
+      <artifactId>kroki-utils</artifactId>
+      <version>${kroki.version}</version>
+    </dependency>
+    <dependency>
       <groupId>de.flapdoodle.embed</groupId>
       <artifactId>de.flapdoodle.embed.mongo</artifactId>
     </dependency>
